test : Test text overflow

--- a/Gwangju_test/index.html
+++ b/Gwangju_test/index.html
@@ -88,5 +88,11 @@
             </div>
         </div>
     </div>
+    <div class="box">
+        <p>내일은 경기 나온다</p>
+        <p>내일은 경기 나온다</p>
+        <p>내일은 경기 나온다</p>
+        <p>내일은 경기 나온다</p>
+    </div>
 </body>
 </html>
