--- a/3D/index.html
+++ b/3D/index.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="box">
-        <div class="item item1" style="background-color: lightblue;"></div>
-        <div class="item item2" style="background-color: lightgreen;"></div>
-        <div class="item item3" style="background-color: lightseagreen;"></div>
-        <div class="item item4" style="background-color: lightcoral;"></div>
-        <div class="item item5" style="background-color: lightsalmon;"></div>
-        <div class="item item6" style="background-color: lightgoldenrodyellow;"></div>
+    <div class="container">
+        <div class="box">
+            <div class="item item1" style="background-color: lightblue;"></div>
+            <div class="item item2" style="background-color: lightgreen;"></div>
+            <div class="item item3" style="background-color: lightseagreen;"></div>
+            <div class="item item4" style="background-color: lightcoral;"></div>
+            <div class="item item5" style="background-color: lightsalmon;"></div>
+            <div class="item item6" style="background-color: lightgoldenrodyellow;"></div>
+        </div>
     </div>
 </body>
 </html>
