--- a/scroll-snap/index.html
+++ b/scroll-snap/index.html
@@ -13,6 +13,8 @@
         <div class="item item2" style="background-color: lightcoral;"></div>
         <div class="item item3" style="background-color: lightcyan;"></div>
         <div class="item item4" style="background-color: lightgreen;"></div>
+        <div></div>
     </div>
+    <div class="content"></div>
 </body>
 </html>
