--- a/Gyeonggi/Desgin/course.html
+++ b/Gyeonggi/Desgin/course.html
@@ -115,6 +115,6 @@
         </footer>
     </div>
     <!-- 푸터 영역 -->
-    <script src="index.js" defer></script>
+    <script src="new.js" defer></script>
 </body>
 </html>
